--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
           data-strict-mode="false"
           data-allow-anonymous="true"
           data-use-avatar="false">
+          data-auto-approve="true"
         </div>
 
         <script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
