--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </div>
   </section>
 
-  <!-- Suggestions Section -->
+    <!-- Suggestions Section -->
   <section id="suggestions" class="section">
     <div class="wrap">
       <div class="card">
@@ -139,11 +139,12 @@
           What should we build next? Share one idea or problem you want solved. No login, no email.
         </p>
 
-        <div class="embed-wrap" style="margin-bottom:20px;">
-          <!-- Google Form (input) -->
+        <!-- Form -->
+        <div class="embed-wrap" style="margin-bottom:24px;">
           <iframe 
             src="https://docs.google.com/forms/d/e/1FAIpQLSehkOVtam6Tos7fxL0-3zbooL9_2TNtyjYjiAJKAjsiNqpqrw/viewform?embedded=true" 
-            height="520" 
+            width="100%" 
+            height="650" 
             frameborder="0" 
             marginheight="0" 
             marginwidth="0">
@@ -156,17 +157,20 @@
           Suggestions below update automatically as people submit new ideas.
         </p>
 
+        <!-- Results -->
         <div class="embed-wrap">
-          <!-- Google Sheet (read-only list) -->
           <iframe 
             src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTY_Orj8Bw2mBIXpaOg_3c3crz_ApbSYBeWooBFl6oYxu9r9JS7qad3KXtHcfMN-Yl7UbYkWmcE-JKn/pubhtml?gid=1689727790&amp;single=true&amp;widget=true&amp;headers=false" 
-            height="500">
+            width="100%" 
+            height="600"
+            frameborder="0">
           </iframe>
         </div>
 
       </div>
     </div>
   </section>
+
 
 </main>
 
