--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
             <div class="tool-card">
                 <div class="tool-icon">💰</div>
                 <h3>Snap Budget</h3>
-                <p>Get a complete picture of your finances with a fast, simple breakdown of your income, expenses, debts, and savings.</p>
+                <p>Get a quick picture of your finances with a fast, simple breakdown of your income, expenses, debts, and savings.</p>
                 <a href="budget/easy.html" class="tool-btn">Create Budget →</a>
             </div>
         </div>
