--- a/index.html
+++ b/index.html
@@ -433,6 +433,13 @@
                 <p>Get a complete picture of your finances with a fast, simple breakdown of your income, expenses, debts, and savings.</p>
                 <a href="budget/easy.html" class="tool-btn">Create Budget →</a>
             </div>
+            
+            <div class="tool-card">
+                <div class="tool-icon">💳</div>
+                <h3>Loan Calculator</h3>
+                <p>Understand the true cost of borrowing money and learn how to reduce the costs with smart repayment strategies.</p>
+                <a href="loans.html" class="tool-btn">Calculate Costs →</a>
+            </div>
         </div>
     </section>
     
